# omomo-protocol

./: .gitignore  Cargo.toml  README.md  SUMMARY.md  build.bat  build.sh  deploy.sh  deploy_dev.sh  deploy_mainnet.sh  deploy_qa.sh  deploy_stage.sh  deploy_testnet.sh  dev_deploy.sh  dtokene.md  margin_qa.sh  math.md  mock_tocken.md  package-lock.json  package.json  redeploy.sh  redeploy_dev.sh  redeploy_mainnet.sh  redeploy_testnet.sh  scenarios.txt  test.sh  user_flow.md  user_flow.sh
contracts/: Cargo.toml
contracts/controller/: Cargo.toml
contracts/controller/src/: admin.rs  borrows.rs  borrows_n_supplies.rs  borrows_supplies.rs  config.rs  constants.rs  healthfactor.rs  helper.rs  lib.rs  liquidation.rs  oraclehook.rs  prices.rs  repay.rs  supplies.rs  test_utils.rs  upgrade.rs  user_flow_protection.rs  user_profile.rs  views.rs
contracts/dtoken/: Cargo.toml
contracts/dtoken/src/: admin.rs  borrow.rs  common.rs  config.rs  constants.rs  deposit.rs  ft.rs  interest_model.rs  interest_rate_model.rs  lib.rs  liquidation.rs  repay.rs  reserve.rs  reward.rs  rewards.rs  supply.rs  upgrade.rs  user_flow_protection.rs  user_profile.rs  views.rs  withdraw.rs
contracts/dtoken/tests/sim/: borrow.rs  liquidation.rs  main.rs  repay.rs  scenarious.rs  supply.rs  upgrade.rs  utils.rs  withdraw.rs
contracts/dtoken/tests/sim/borrow/: borrow.rs  borrow_more_than_allowed.rs  borrow_success.rs  borrow_success_after_failure.rs  borrow_undercollateralized.rs  borrow_zero_tokens.rs  mod.rs
contracts/dtoken/tests/sim/contracts/: dtoken_v1.wasm
contracts/dtoken/tests/sim/liquidation/: liquidation_fail_as_liquidator_is_borrower.rs  liquidation_fail_due_to_low_health_factor.rs  liquidation_fail_not_allowed_amount.rs  liquidation_failed_on_call_with_wrong_borrow_token.rs  liquidation_success.rs  mod.rs
contracts/dtoken/tests/sim/repay/: mod.rs  repay.rs  repay_by_parts.rs  repay_by_parts_with_interest.rs  repay_less_fail.rs  repay_on_token_with_no_borrow.rs  repay_success.rs  repay_success_after_failure.rs  repay_zero_tokens.rs
contracts/dtoken/tests/sim/supply/: mod.rs  supply_amount_should_be_positive.rs  supply_fail_due_to_mutex.rs  supply_fail_due_to_zero_denominator.rs  supply_not_enough_tokens.rs  supply_success.rs  supply_success_after_failure.rs
contracts/dtoken/tests/sim/ugrade/: mod.rs  upgrade.rs
contracts/dtoken/tests/sim/upgrade/: mod.rs  upgrade_check_state.rs  upgrade_without_field.rs
contracts/dtoken/tests/sim/withdraw/: mod.rs  withdraw.rs  withdraw_success.rs  (+6 more)
contracts/dtoken/tests/userflows/: userflow.borrow.feature  userflow.e2e.feature  userflow.liquidation.feature  userflow.repay.feature  userflow.supply.feature  userflow.withdraw.feature
contracts/dtoken/tests/workspace/: main.rs  utils.rs
contracts/general/: Cargo.toml
contracts/general/src/: big_decimal.rs  lib.rs  percent.rs  ratio.rs  wbalance.rs
contracts/interest_rate_model/: Cargo.toml
contracts/interest_rate_model/src/: lib.rs
contracts/leverage_trading/: Cargo.toml  build.sh  build_pipe.sh  deploy.sh  deploy_dev.sh  deploy_stage.sh  deploy_test.sh  dev_deploy.sh  dev_user_flow.sh  test_pipe.sh
contracts/leverage_trading/neardev/: dev-account  dev-account.env
contracts/leverage_trading/res/: limit_orders.wasm
contracts/leverage_trading/src/: big_decimal.rs  cancel_limit_order.rs  cancel_order.rs  cancel_take_profit_order.rs  common.rs  create_order.rs  deposit.rs  execute_order.rs  ft.rs  lib.rs  limit_trade_history.rs  liquidate_order.rs  liquidity_slot.rs  margin_trade_history.rs  market.rs  metadata.rs  pnl.rs  price.rs  ref_finance.rs  utils.rs  view.rs  withdraw.rs
contracts/leverage_trading/tests/workspace/: main.rs  utils.rs
contracts/market/: Cargo.toml
contracts/market/src/: admin.rs  borrow.rs  common.rs  config.rs  deposit.rs  ft.rs  interest_model.rs  interest_rate_model.rs  lib.rs  liquidation.rs  repay.rs  rewards.rs  supply.rs  upgrade.rs  user_profile.rs  utils.rs  views.rs  withdraw.rs
contracts/market/tests/sim/: main_old.rs  utils.rs
contracts/market/tests/userflows/: userflow.borrow.feature  userflow.e2e.feature  userflow.liquidation.feature  userflow.repay.feature
contracts/market/tests/workspace/: utils.rs
contracts/mock-token/: Cargo.toml
contracts/mock-token/src/: lib.rs
contracts/mtrading/: Cargo.toml
contracts/mtrading/src/: lib.rs
contracts/test-utoken/: Cargo.toml
contracts/test-utoken/src/: lib.rs
contracts/test-utoken/tests/sim/: deploy_test.rs  main.rs  utils.rs
contracts/token/: Cargo.toml
contracts/token/src/: ft.rs  lib.rs  supply.rs
contracts/token_mock/: Cargo.toml
contracts/token_mock/src/: lib.rs
(+101 files in other folders)
