[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[lints]
manual_range_contains = "allow"
assign_op_pattern = "allow"
ptr_offset_with_cast = "allow"

[lints.'cfg(feature = "clippy")']
manual_range_contains = "allow"
assign_op_pattern = "allow"
ptr_offset_with_cast = "allow"


[workspace]
members = [
    "general",
    "controller",
    "dtoken",
    "test-utoken",
    "token"
]
