[package]
name = "dtoken"
version = "0.0.1"
authors = ["mark.ts@blaize.tech", "tymofii.s@blaize.tech", "vladyslav.v@blaize.tech", "orest.o@blaize.tech", "sergii.p@blaize.tech"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.6"
near-contract-standards = "4.0.0-pre.6"
general = { path = "../general" }
nanoid = "0.4.0"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.6"
test-utoken = { path = "../test-utoken" }
controller = { path = "../controller" }

