[package]
name = "dtoken"
version = "0.0.1"
authors = ["mark.ts@blaize.tech", "tymofii.s@blaize.tech", "vladyslav.v@blaize.tech", "orest.o@blaize.tech", "sergii.p@blaize.tech"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk =  "4.0.0-pre.9"
near-contract-standards = "4.0.0-pre.6"
near-sys = "0.2.0"
general = { path = "../general" }

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.6"
test-utoken = { path = "../test-utoken" }
controller = { path = "../controller" }

