[package]
name = "dtoken"
version = "0.0.1"
authors = ["mark.ts@blaize.tech", "tymofii.s@blaize.tech", "vladyslav.v@blaize.tech", "orest.o@blaize.tech", "sergii.p@blaize.tech"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.6"
workspaces = "0.5.0"
near-contract-standards = "4.0.0-pre.6"
general = { path = "../general" }
near-sys = "0.2.0"
tokio = "1.21.1"
anyhow = "1.0.65"

[dev-dependencies]
test-utoken = { path = "../test-utoken" }
controller = { path = "../controller" }