[package]
name = "mock-token"
version = "0.0.1"
authors = ["mark.ts@blaize.tech", "tymofii.s@blaize.tech", "vladyslav.v@blaize.tech", "orest.o@blaize.tech", "sergii.p@blaize.tech"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.3"
near-contract-standards = "4.0.0-pre.6"

